// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will allow admins to create log entries for other users 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": "2024-07-23T13:17:17.900Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "de92700b-73c2-478b-90b9-167d3e2b1383",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": {
      "date": "2024-03-20T13:12:00",
      "timezone": "Asia/Tokyo",
    },
  },
  "updatedAt": "2024-07-23T14:14:19.838Z",
}
`;

exports[`Log entries E2E tests when creating log entries will create and return a new log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1140,
      "material": "fe",
      "name": "golden minimalism",
      "o2Percent": 26.9,
      "pressureUnit": "psi",
      "startPressure": 3210,
      "volume": 18,
      "workingPressure": 207,
    },
  ],
  "conditions": {
    "temperatureUnit": "C",
  },
  "createdAt": "2024-07-23T13:17:17.799Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 4.8,
    "weightUnit": "lbs",
  },
  "id": "ab81b769-109b-4920-aa49-24a17a4d939e",
  "logNumber": 102,
  "notes": "I did a dive!",
  "site": {
    "averageDifficulty": 2.28,
    "averageRating": 3.09,
    "createdOn": "2023-04-11T15:52:27.157Z",
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 12.86,
      "unit": "m",
    },
    "description": "Cui sopor assumenda minus conduco vehemens varius ipsa uredo. Strenuus conculco bis. Capitulus teneo desidero dedecor arbitro voluptatum.",
    "directions": "Universe debeo arcus similique ipsum speculum et adhaero minima. Ambitus ratione adaugeo vilis celer demitto ulciscor incidunt decens tristis. Ultra thymum conturbo.",
    "freeToDive": false,
    "gps": {
      "lat": -57.4046,
      "lon": 39.6424,
    },
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "location": "West Emanuelbury",
    "name": "alert awesome intuition",
    "updatedOn": "2023-07-18T10:11:05.387Z",
    "waterType": "fresh",
  },
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": {
      "date": "2024-03-20T13:12:00",
      "timezone": "Asia/Tokyo",
    },
  },
  "updatedAt": "2024-07-23T14:18:56.813Z",
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "37a214f6-6167-4468-947d-b3171a0425fd" not found."`;

exports[`Log entries E2E tests when fetching recent dive sites will allow admins to query the most recent dive sites for any user 1`] = `
[
  {
    "id": "d7de84b7-130f-4d3c-be13-bff50cd40596",
    "name": "apt colossal initial",
  },
  {
    "id": "b9cd677a-d240-403d-9dab-620dec47451d",
    "name": "giant broken meat",
  },
  {
    "id": "f92f8727-7c36-46bf-b282-8f02f9ebe968",
    "name": "gloomy acceptable hummus",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "2c8f33c5-8775-4a84-906b-bbf218b176fd",
    "name": "lost profuse garlic",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "ff54a265-50e4-4051-a30b-d0aae3b2f178",
    "name": "scornful well-worn baggage",
  },
  {
    "id": "1561e4a5-8777-433a-9e9d-e8a07452ce88",
    "name": "silky sharp brilliant",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive sites will return the most recently visited dive sites 1`] = `
[
  {
    "id": "d7de84b7-130f-4d3c-be13-bff50cd40596",
    "name": "apt colossal initial",
  },
  {
    "id": "3c5286b8-3428-4d21-9847-fce371ec1175",
    "name": "bustling normal convert",
  },
  {
    "id": "b9cd677a-d240-403d-9dab-620dec47451d",
    "name": "giant broken meat",
  },
  {
    "id": "f92f8727-7c36-46bf-b282-8f02f9ebe968",
    "name": "gloomy acceptable hummus",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "9d23572d-d828-4c52-9da3-fdb8cdde0222",
    "name": "humble crazy cockpit",
  },
  {
    "id": "81162750-b95e-4ac5-97e3-d8a5d42ed48c",
    "name": "legal incomplete trachoma",
  },
  {
    "id": "2c8f33c5-8775-4a84-906b-bbf218b176fd",
    "name": "lost profuse garlic",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "ff54a265-50e4-4051-a30b-d0aae3b2f178",
    "name": "scornful well-worn baggage",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "1561e4a5-8777-433a-9e9d-e8a07452ce88",
    "name": "silky sharp brilliant",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
  {
    "id": "a078a554-1a01-4ca3-8d3a-682f1c23e64d",
    "name": "sympathetic mortified taxicab",
  },
]
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1010,
      "material": "fe",
      "name": "disloyal pancreas",
      "o2Percent": 27.8,
      "pressureUnit": "psi",
      "startPressure": 3220,
      "volume": 12,
      "workingPressure": 182,
    },
    {
      "count": 2,
      "endPressure": 71.42216789233498,
      "material": "fe",
      "name": "sizzling full",
      "pressureUnit": "bar",
      "startPressure": 221.33119702106342,
      "volume": 18,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 65.3,
    "bottomTemperature": 69.3,
    "current": 3.7,
    "surfaceTemperature": 52.8,
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 122.13,
    "depthUnit": "ft",
    "maxDepth": 135.7,
  },
  "equipment": {
    "camera": true,
    "exposureSuit": "none",
    "gloves": true,
    "hood": false,
    "torch": true,
    "trimCorrectness": "headDown",
    "weight": 7.4,
    "weightCorrectness": "over",
    "weightUnit": "lbs",
  },
  "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
  "notes": "Quod vester sol cura compono deprecator tepidus sto utpote repellat. Porro ascit urbs sub. Subiungo creta admitto.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
  "tags": [],
  "timing": {
    "bottomTime": 5016,
    "duration": 5518,
    "entryTime": {
      "date": "2023-02-03T10:50:47",
      "timezone": "Africa/Maseru",
    },
  },
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1010,
      "material": "fe",
      "name": "disloyal pancreas",
      "o2Percent": 27.8,
      "pressureUnit": "psi",
      "startPressure": 3220,
      "volume": 12,
      "workingPressure": 182,
    },
    {
      "count": 2,
      "endPressure": 71.42216789233498,
      "material": "fe",
      "name": "sizzling full",
      "pressureUnit": "bar",
      "startPressure": 221.33119702106342,
      "volume": 18,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 65.3,
    "bottomTemperature": 69.3,
    "current": 3.7,
    "surfaceTemperature": 52.8,
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 122.13,
    "depthUnit": "ft",
    "maxDepth": 135.7,
  },
  "equipment": {
    "camera": true,
    "exposureSuit": "none",
    "gloves": true,
    "hood": false,
    "torch": true,
    "trimCorrectness": "headDown",
    "weight": 7.4,
    "weightCorrectness": "over",
    "weightUnit": "lbs",
  },
  "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
  "notes": "Quod vester sol cura compono deprecator tepidus sto utpote repellat. Porro ascit urbs sub. Subiungo creta admitto.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
  "tags": [],
  "timing": {
    "bottomTime": 5016,
    "duration": 5518,
    "entryTime": {
      "date": "2023-02-03T10:50:47",
      "timezone": "Africa/Maseru",
    },
  },
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
[
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-02-06T14:57:13",
      "timezone": "America/Aruba",
    },
    "id": "0b492656-c41f-4a98-9b7b-39201b359e0a",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-02-08T14:30:23",
      "timezone": "America/Sao_Paulo",
    },
    "id": "cbf10c4a-29ba-4ca1-bdf6-5e485b97d5d5",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-03-30T02:15:10",
      "timezone": "Africa/Nairobi",
    },
    "id": "20cd850b-94c4-4e86-a242-80042bd01c81",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-04-15T02:52:57",
      "timezone": "America/Miquelon",
    },
    "id": "65742639-5ad5-446e-8b49-320dd32e8cd0",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-04-20T14:30:04",
      "timezone": "America/Havana",
    },
    "id": "4bc679f4-b47f-4224-8464-fc44e3dc4104",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-06-05T01:22:13",
      "timezone": "America/Belem",
    },
    "id": "3cad257f-19c7-4194-9409-7fafa0ab3c40",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-06-08T06:30:12",
      "timezone": "Africa/Accra",
    },
    "id": "765caf6a-689f-49f2-a8cb-76f338518979",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "air": undefined,
    "entryTime": {
      "date": "2023-07-08T01:28:53",
      "timezone": "America/Kentucky/Louisville",
    },
    "id": "fc08b719-3b68-4865-a861-7fdd68f6464e",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2024-06-14T00:22:34",
      "timezone": "Asia/Sakhalin",
    },
    "id": "3a99c02e-d580-4648-a6ed-ace263795ea8",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2024-06-08T11:19:32",
      "timezone": "Europe/Simferopol",
    },
    "id": "394fb770-0b2a-4c70-ad2a-629bb861a76c",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2024-05-06T12:07:16",
      "timezone": "Africa/Nouakchott",
    },
    "id": "ee2885fe-5d8e-416c-9af3-d90b26c60a41",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2024-05-06T07:55:57",
      "timezone": "America/Halifax",
    },
    "id": "c4292abd-1d6c-4fe1-a00a-a013dc43829f",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": {
      "date": "2024-04-23T15:24:20",
      "timezone": "Asia/Phnom_Penh",
    },
    "id": "1308b043-6eed-4aba-9932-af48e53e3a43",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-04-12T06:08:04",
      "timezone": "Europe/Monaco",
    },
    "id": "fe25d3fa-3df0-49a1-aa80-911220cbd734",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-03-29T19:46:17",
      "timezone": "Asia/Baku",
    },
    "id": "8f764090-c254-4ad6-a762-6ce2e1166b4d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2024-03-24T00:50:37",
      "timezone": "Antarctica/Davis",
    },
    "id": "b1f35ab1-ab10-44b8-b208-65181b43a8ba",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": {
      "date": "2024-02-27T12:40:17",
      "timezone": "Australia/Sydney",
    },
    "id": "f4383674-c416-4448-8b21-7ab5f36784ad",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2024-02-22T19:17:20",
      "timezone": "America/Port-au-Prince",
    },
    "id": "83c07ad6-2eaa-452c-8377-14847c443c24",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2024-02-22T16:25:14",
      "timezone": "Asia/Yakutsk",
    },
    "id": "777bfe88-2edc-4093-9249-6ff62c87d7fc",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": {
      "date": "2024-02-18T16:10:08",
      "timezone": "Asia/Dili",
    },
    "id": "b69cc091-7a89-464c-a1fb-8348fdf55c4d",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-01-28T19:38:33",
      "timezone": "America/Belem",
    },
    "id": "1ad7a960-ee20-4b69-8762-67ddf939f5c1",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-12-29T08:14:25",
      "timezone": "America/Mazatlan",
    },
    "id": "15701e41-4126-4f22-bf9d-10dcafea8276",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": {
      "date": "2023-12-26T17:04:38",
      "timezone": "America/Detroit",
    },
    "id": "f39774ee-0d59-49ba-8bbb-f59a45fd1bf2",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": {
      "date": "2023-11-15T18:09:32",
      "timezone": "Indian/Maldives",
    },
    "id": "923fc9c2-58d9-4160-bbba-e71ba40f4e32",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-11-05T09:23:07",
      "timezone": "America/Santo_Domingo",
    },
    "id": "4539cf76-1cc1-474f-962b-d30a5ba4ff76",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2023-11-04T16:43:36",
      "timezone": "Australia/Lindeman",
    },
    "id": "7a34f0d7-11f9-444a-ad69-c45507842b9d",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": {
      "date": "2023-10-13T11:18:26",
      "timezone": "America/Port_of_Spain",
    },
    "id": "44ffccb9-4d39-4fe4-b375-c7c4b47b0282",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": {
      "date": "2023-09-25T12:59:10",
      "timezone": "Pacific/Tongatapu",
    },
    "id": "9d68ec7d-f432-4cb5-aab4-121978faa47a",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-09-09T17:52:08",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "22387685-efdc-4e62-a6c4-ad5ac55fec97",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2023-09-08T07:54:19",
      "timezone": "Asia/Kuching",
    },
    "id": "089f13d1-e100-4a92-9103-d93103a3eb22",
    "owner": "Ayla.Rippin",
    "site": "vicious difficult skean",
  },
  {
    "entryTime": {
      "date": "2023-07-22T10:34:45",
      "timezone": "America/Santiago",
    },
    "id": "78113364-7912-408f-8983-b49b06ce7f09",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": {
      "date": "2023-07-08T01:28:53",
      "timezone": "America/Kentucky/Louisville",
    },
    "id": "fc08b719-3b68-4865-a861-7fdd68f6464e",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-06-08T06:30:12",
      "timezone": "Africa/Accra",
    },
    "id": "765caf6a-689f-49f2-a8cb-76f338518979",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": {
      "date": "2023-06-05T01:22:13",
      "timezone": "America/Belem",
    },
    "id": "3cad257f-19c7-4194-9409-7fafa0ab3c40",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-04-20T14:30:04",
      "timezone": "America/Havana",
    },
    "id": "4bc679f4-b47f-4224-8464-fc44e3dc4104",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2023-04-15T02:52:57",
      "timezone": "America/Miquelon",
    },
    "id": "65742639-5ad5-446e-8b49-320dd32e8cd0",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": {
      "date": "2023-03-30T02:15:10",
      "timezone": "Africa/Nairobi",
    },
    "id": "20cd850b-94c4-4e86-a242-80042bd01c81",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2023-02-08T14:30:23",
      "timezone": "America/Sao_Paulo",
    },
    "id": "cbf10c4a-29ba-4ca1-bdf6-5e485b97d5d5",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2023-02-06T14:57:13",
      "timezone": "America/Aruba",
    },
    "id": "0b492656-c41f-4a98-9b7b-39201b359e0a",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2023-02-05T10:44:18",
      "timezone": "America/Curacao",
    },
    "id": "6b5eaab8-e8b0-4e6b-9cb7-10ce4dbc2128",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-02-04T15:35:13",
      "timezone": "Europe/Bucharest",
    },
    "id": "360480c3-6acc-4eda-8500-7833cf244979",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2023-02-03T10:50:47",
      "timezone": "Africa/Maseru",
    },
    "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-01-15T21:31:56",
      "timezone": "Asia/Atyrau",
    },
    "id": "3afad4d3-fb79-4048-a014-29c193aba638",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": {
      "date": "2023-01-13T10:51:17",
      "timezone": "Pacific/Port_Moresby",
    },
    "id": "74f329c2-e408-45e8-8ad1-e9149dd8784d",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": {
      "date": "2022-11-26T23:55:22",
      "timezone": "Asia/Kathmandu",
    },
    "id": "0debe7ef-0ee8-4521-9260-76d43cdbe6b7",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2022-11-06T22:58:51",
      "timezone": "Asia/Tomsk",
    },
    "id": "f1f3ff9e-15d3-4935-9b37-9c43a56b82b3",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2022-10-30T17:39:30",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "7fd2a90e-3102-4569-b670-f88aa6c2045e",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2022-10-23T07:43:24",
      "timezone": "Europe/London",
    },
    "id": "05b3916f-8be8-4a9d-b427-703bea94b010",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2022-07-09T11:01:25",
      "timezone": "Asia/Nicosia",
    },
    "id": "9cc3bb97-8767-4929-b393-892116a3b110",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2022-06-22T15:42:08",
      "timezone": "Asia/Yangon",
    },
    "id": "e5ae5283-10cf-4d95-b0e5-ab1b3ec77bef",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2022-06-05T22:17:57",
      "timezone": "Europe/Vatican",
    },
    "id": "250d3063-fe7f-4b1b-89f7-410391a7125f",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-05-05T01:32:06",
      "timezone": "Asia/Qostanay",
    },
    "id": "3746ab15-f3c0-47ca-b41b-043022b74013",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2022-05-03T15:33:55",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "b8d99ea9-2ec9-44f7-835d-d2d8290bdc3c",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2024-06-14T00:22:34",
      "timezone": "Asia/Sakhalin",
    },
    "id": "3a99c02e-d580-4648-a6ed-ace263795ea8",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2024-06-08T11:19:32",
      "timezone": "Europe/Simferopol",
    },
    "id": "394fb770-0b2a-4c70-ad2a-629bb861a76c",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2024-05-06T12:07:16",
      "timezone": "Africa/Nouakchott",
    },
    "id": "ee2885fe-5d8e-416c-9af3-d90b26c60a41",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2024-05-06T07:55:57",
      "timezone": "America/Halifax",
    },
    "id": "c4292abd-1d6c-4fe1-a00a-a013dc43829f",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": {
      "date": "2024-04-23T15:24:20",
      "timezone": "Asia/Phnom_Penh",
    },
    "id": "1308b043-6eed-4aba-9932-af48e53e3a43",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-04-12T06:08:04",
      "timezone": "Europe/Monaco",
    },
    "id": "fe25d3fa-3df0-49a1-aa80-911220cbd734",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-03-29T19:46:17",
      "timezone": "Asia/Baku",
    },
    "id": "8f764090-c254-4ad6-a762-6ce2e1166b4d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2024-03-24T00:50:37",
      "timezone": "Antarctica/Davis",
    },
    "id": "b1f35ab1-ab10-44b8-b208-65181b43a8ba",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": {
      "date": "2024-02-27T12:40:17",
      "timezone": "Australia/Sydney",
    },
    "id": "f4383674-c416-4448-8b21-7ab5f36784ad",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2024-02-22T19:17:20",
      "timezone": "America/Port-au-Prince",
    },
    "id": "83c07ad6-2eaa-452c-8377-14847c443c24",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2024-02-22T16:25:14",
      "timezone": "Asia/Yakutsk",
    },
    "id": "777bfe88-2edc-4093-9249-6ff62c87d7fc",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": {
      "date": "2024-02-18T16:10:08",
      "timezone": "Asia/Dili",
    },
    "id": "b69cc091-7a89-464c-a1fb-8348fdf55c4d",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-01-28T19:38:33",
      "timezone": "America/Belem",
    },
    "id": "1ad7a960-ee20-4b69-8762-67ddf939f5c1",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-12-29T08:14:25",
      "timezone": "America/Mazatlan",
    },
    "id": "15701e41-4126-4f22-bf9d-10dcafea8276",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": {
      "date": "2023-12-26T17:04:38",
      "timezone": "America/Detroit",
    },
    "id": "f39774ee-0d59-49ba-8bbb-f59a45fd1bf2",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": {
      "date": "2023-11-15T18:09:32",
      "timezone": "Indian/Maldives",
    },
    "id": "923fc9c2-58d9-4160-bbba-e71ba40f4e32",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-11-05T09:23:07",
      "timezone": "America/Santo_Domingo",
    },
    "id": "4539cf76-1cc1-474f-962b-d30a5ba4ff76",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2023-11-04T16:43:36",
      "timezone": "Australia/Lindeman",
    },
    "id": "7a34f0d7-11f9-444a-ad69-c45507842b9d",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": {
      "date": "2023-10-13T11:18:26",
      "timezone": "America/Port_of_Spain",
    },
    "id": "44ffccb9-4d39-4fe4-b375-c7c4b47b0282",
    "owner": "Ayla.Rippin",
    "site": "nifty idle roof",
  },
  {
    "entryTime": {
      "date": "2023-09-25T12:59:10",
      "timezone": "Pacific/Tongatapu",
    },
    "id": "9d68ec7d-f432-4cb5-aab4-121978faa47a",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-09-09T17:52:08",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "22387685-efdc-4e62-a6c4-ad5ac55fec97",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2023-09-08T07:54:19",
      "timezone": "Asia/Kuching",
    },
    "id": "089f13d1-e100-4a92-9103-d93103a3eb22",
    "owner": "Ayla.Rippin",
    "site": "vicious difficult skean",
  },
  {
    "entryTime": {
      "date": "2023-07-22T10:34:45",
      "timezone": "America/Santiago",
    },
    "id": "78113364-7912-408f-8983-b49b06ce7f09",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": {
      "date": "2023-07-08T01:28:53",
      "timezone": "America/Kentucky/Louisville",
    },
    "id": "fc08b719-3b68-4865-a861-7fdd68f6464e",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-06-08T06:30:12",
      "timezone": "Africa/Accra",
    },
    "id": "765caf6a-689f-49f2-a8cb-76f338518979",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": {
      "date": "2023-06-05T01:22:13",
      "timezone": "America/Belem",
    },
    "id": "3cad257f-19c7-4194-9409-7fafa0ab3c40",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-04-20T14:30:04",
      "timezone": "America/Havana",
    },
    "id": "4bc679f4-b47f-4224-8464-fc44e3dc4104",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2023-04-15T02:52:57",
      "timezone": "America/Miquelon",
    },
    "id": "65742639-5ad5-446e-8b49-320dd32e8cd0",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": {
      "date": "2023-03-30T02:15:10",
      "timezone": "Africa/Nairobi",
    },
    "id": "20cd850b-94c4-4e86-a242-80042bd01c81",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2023-02-08T14:30:23",
      "timezone": "America/Sao_Paulo",
    },
    "id": "cbf10c4a-29ba-4ca1-bdf6-5e485b97d5d5",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2023-02-06T14:57:13",
      "timezone": "America/Aruba",
    },
    "id": "0b492656-c41f-4a98-9b7b-39201b359e0a",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2023-02-05T10:44:18",
      "timezone": "America/Curacao",
    },
    "id": "6b5eaab8-e8b0-4e6b-9cb7-10ce4dbc2128",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-02-04T15:35:13",
      "timezone": "Europe/Bucharest",
    },
    "id": "360480c3-6acc-4eda-8500-7833cf244979",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2023-02-03T10:50:47",
      "timezone": "Africa/Maseru",
    },
    "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-01-15T21:31:56",
      "timezone": "Asia/Atyrau",
    },
    "id": "3afad4d3-fb79-4048-a014-29c193aba638",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": {
      "date": "2023-01-13T10:51:17",
      "timezone": "Pacific/Port_Moresby",
    },
    "id": "74f329c2-e408-45e8-8ad1-e9149dd8784d",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": {
      "date": "2022-11-26T23:55:22",
      "timezone": "Asia/Kathmandu",
    },
    "id": "0debe7ef-0ee8-4521-9260-76d43cdbe6b7",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2022-11-06T22:58:51",
      "timezone": "Asia/Tomsk",
    },
    "id": "f1f3ff9e-15d3-4935-9b37-9c43a56b82b3",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2022-10-30T17:39:30",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "7fd2a90e-3102-4569-b670-f88aa6c2045e",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2022-10-23T07:43:24",
      "timezone": "Europe/London",
    },
    "id": "05b3916f-8be8-4a9d-b427-703bea94b010",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2022-07-09T11:01:25",
      "timezone": "Asia/Nicosia",
    },
    "id": "9cc3bb97-8767-4929-b393-892116a3b110",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2022-06-22T15:42:08",
      "timezone": "Asia/Yangon",
    },
    "id": "e5ae5283-10cf-4d95-b0e5-ab1b3ec77bef",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2022-06-05T22:17:57",
      "timezone": "Europe/Vatican",
    },
    "id": "250d3063-fe7f-4b1b-89f7-410391a7125f",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-05-05T01:32:06",
      "timezone": "Asia/Qostanay",
    },
    "id": "3746ab15-f3c0-47ca-b41b-043022b74013",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2022-05-03T15:33:55",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "b8d99ea9-2ec9-44f7-835d-d2d8290bdc3c",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "startDate",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "endDate",
      ],
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime' | 'logNumber', received 'wetness'",
      "options": [
        "entryTime",
        "logNumber",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Start date must be before end date.",
      "path": [],
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will allow an admin to update any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": {
      "date": "2024-03-20T13:12:00",
      "timezone": "Asia/Tokyo",
    },
  },
  "updatedAt": "2024-07-23T18:04:13.236Z",
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "timing",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "e637a808-90cb-4fba-823e-35cd1898ee4a" not found."`;

exports[`Log entries E2E tests when updating an existing log entry will update the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1040,
      "material": "al",
      "name": "raw cushion",
      "o2Percent": 28.8,
      "pressureUnit": "psi",
      "startPressure": 2940,
      "volume": 4,
      "workingPressure": 300,
    },
    {
      "count": 1,
      "endPressure": 52.188035525381565,
      "material": "fe",
      "name": "caring poem",
      "o2Percent": 39.4,
      "pressureUnit": "bar",
      "startPressure": 191.41511167166755,
      "volume": 18,
      "workingPressure": 300,
    },
  ],
  "conditions": {
    "temperatureUnit": "F",
  },
  "createdAt": "2023-02-03T15:50:47.000Z",
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "depthUnit": "m",
    "maxDepth": 28.2,
  },
  "equipment": {
    "weight": 2.77,
    "weightUnit": "kg",
  },
  "id": "48b7aeef-c0db-4412-bddd-3e2334a2e58d",
  "logNumber": 102,
  "notes": "I did a dive!",
  "tags": [],
  "timing": {
    "bottomTime": 46,
    "duration": 58.32,
    "entryTime": {
      "date": "2024-03-20T13:12:00",
      "timezone": "Asia/Tokyo",
    },
  },
  "updatedAt": "2024-07-23T18:04:13.101Z",
}
`;
